--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.almosafer.qa</groupId>
-    <artifactId>apiTests</artifactId> 
+    <artifactId>apiTests</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
@@ -14,7 +14,6 @@
             <artifactId>rest-assured</artifactId>
             <version>4.4.0</version>
         </dependency>
-
 
         <!-- JSON handling -->
         <dependency>
@@ -46,11 +45,8 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M7</version>
                 <configuration>
-                    <includes>
-                        <include>**/*Tests.java</include> 
-                        <include>**/tests/*.java</include>
-                    </includes>
                     <testSourceDirectory>${project.basedir}/src/test/java</testSourceDirectory>
+                    <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
                 </configuration>
             </plugin>
 
@@ -59,6 +55,16 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
                 <version>2.22.2</version>
+                <executions>
+                    <!-- This will ensure that the reports are automatically generated after tests -->
+                    <execution>
+                        <id>surefire-report</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
                     <outputDirectory>${project.build.directory}/surefire-reports</outputDirectory>
                 </configuration>
